--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <ImageView
-                            android:id="@+id/imageView2"
+                            android:id="@+id/imgAvatar"
                             android:layout_width="70dp"
                             android:layout_height="70dp"
                             android:scaleType="centerCrop"
