--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -20,7 +20,7 @@
             app:cardCornerRadius="50dp">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/imgAvatar"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:background="@color/xanh_chu_de"
@@ -30,7 +30,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/txtTen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -51,7 +51,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/txtThongTin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -62,7 +62,7 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/textView14"
+            android:id="@+id/txtDoiMK"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
@@ -133,6 +133,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/txtDoiTac"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -142,12 +143,13 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/txtQuanLyKS"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:drawableStart="@drawable/ic_add_home"
             android:drawablePadding="10dp"
-            android:text="Đăng chỗ nghỉ"
+            android:text="Quản lý khách sạn"
             android:textSize="18sp" />
 
         <TextView
