--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Trung Nguyen"
+            android:text=""
             android:textColor="#FEFEFE"
             android:textSize="24sp"
             android:textStyle="bold"
