--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,10 +13,17 @@
         android:id="@+id/view_pager_2"
         android:layout_above="@+id/bottom_navigation" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#365360"
+        android:layout_above="@id/bottom_navigation"
+        android:paddingRight="8dp"
+        android:paddingLeft="8dp"/>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="65dp"
-        android:background="#2d82b5"
+        android:background="#FFFFFF"
         android:id="@+id/bottom_navigation"
         android:layout_alignParentBottom="true"
         app:itemIconTint="@color/custom_color_bottom_navigation"
