--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -8,26 +8,37 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="8dp">
+        android:orientation="horizontal">
 
         <TextView
-            android:layout_width="339dp"
-            android:layout_height="wrap_content"
+            android:layout_width="280dp"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
             android:text="Địa điểm yêu thích"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:layout_marginStart="20dp"
+            android:textColor="#365360"
+            android:textSize="24sp" />
 
         <ImageView
             android:id="@+id/btnReload"
             android:layout_width="43dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             app:srcCompat="@drawable/ic_refresh" />
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#365360"
+        android:layout_below="@+id/ll"
+        android:paddingRight="8dp"
+        android:paddingLeft="8dp"
+        android:layout_marginTop="6dp" />
 
     <ScrollView
         android:layout_width="match_parent"
