--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -10,10 +10,10 @@
         android:title="Yêu thích"
         android:icon="@drawable/ic_favorite"/>
 
-    <item
-        android:id="@+id/bottom_schedule"
-        android:title="Lịch trình"
-        android:icon="@drawable/ic_event_note"/>
+<!--    <item-->
+<!--        android:id="@+id/bottom_schedule"-->
+<!--        android:title="Lịch trình"-->
+<!--        android:icon="@drawable/ic_event_note"/>-->
 
     <item
         android:id="@+id/bottom_booking"
