--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,25 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
     android:padding="16dp">
 
-    <EditText
-        android:id="@+id/editTextText"
+    <TextView
         android:layout_width="match_parent"
+        android:gravity="center_vertical"
+        android:paddingStart="10dp"
         android:layout_height="50dp"
-        android:background="@drawable/search_background"
-        android:drawableStart="@drawable/ic_search"
-        android:drawablePadding="16dp"
-        android:hint="Tìm địa điểm..."
-        android:inputType="text"
-        android:padding="10dp"
-        android:textColor="@color/xanh_nhat_background"
-        android:textColorHint="@color/xanh_nhat_background"
-        android:textSize="20sp" />
+        android:layout_marginBottom="20dp"
+        android:background="@color/xanh_nhat_background"
+        android:text="VieTravel - Cùng bạn trên mọi hành trình"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/search_background">
+
+        <EditText
+            android:id="@+id/edtFindLocation"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:drawablePadding="16dp"
+            android:hint="Tìm địa điểm..."
+            android:inputType="text"
+            android:padding="10dp"
+            android:textColor="@color/xanh_nhat_background"
+            android:textColorHint="@color/xanh_nhat_background"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:id="@+id/btnSearch"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ic_search" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
