--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
         android:layout_marginEnd="101dp"
         android:background="@drawable/custom_edt"
         android:hint="mật khẩu"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:paddingLeft="10dp"
         android:textColorHint="#617CA3"
         app:layout_constraintEnd_toEndOf="parent"
