--- a/app/src/main/res/layout/viewholder_booking.xml
+++ b/app/src/main/res/layout/viewholder_booking.xml
@@ -50,10 +50,10 @@
     <Button
         android:id="@+id/btnHuy"
         android:layout_width="120dp"
-        android:layout_height="40dp"
+        android:layout_height="45dp"
         android:layout_gravity="right"
-        android:background="@drawable/bg_btn"
+        android:background="@drawable/button_bg_rounded"
         app:backgroundTint="@null"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:text="Hủy phòng" />
 </LinearLayout>
