--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="xanh_nhat_background">#072B60</color>
     <color name="xanh_chu_de">#2d82b5</color>
     <color name="lavender">#8692f7</color>
+    <color name="gray">#696767</color>
 </resources>
